fix issue with scrollbar disappear on dropdown

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -76,3 +76,7 @@ body {
         @apply bg-background text-foreground;
     }
 }
+
+body[data-scroll-locked][data-scroll-locked] {
+    overflow: auto !important;
+}
